<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <include
            android:id="@+id/requestUrlLayout"
            layout="@layout/required_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addNewHeader"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/add_new_header"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestUrlLayout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/headers"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/addNewHeader"
            app:layout_constraintEnd_toStartOf="@+id/addNewHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addNewHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/headersRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addNewHeader" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headersRV">

            <RadioButton
                android:id="@+id/getRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/get" />

            <RadioButton
                android:id="@+id/postRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/requestBodyLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <TextView
                android:id="@+id/requestBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_body"
                android:textSize="18sp" />

            <include
                android:id="@+id/requestBodyEditText"
                layout="@layout/non_required_edit_text"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/makeRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/make_a_request"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestBodyLayout"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>