<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/headerKey"
            layout="@layout/non_required_edit_text"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/header_edit_text_shape"
            android:gravity="center"
            android:hint="@string/accept" />

        <include
            android:id="@+id/headerValue"
            layout="@layout/non_required_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/header_edit_text_shape"
            android:gravity="center"
            android:hint="@string/application_json" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/removeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/delete_selected_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-6dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>